resolution du bugg de la nav barre avec z-index

--- a/src/components/Aventures/aventures.sass
+++ b/src/components/Aventures/aventures.sass
@@ -19,7 +19,7 @@
 .caphornText
   width: 60em
   color: white
-  margin: 5% 0% 0% 4%
+  margin: 5% 0% 0% 6%
   font-style: normal
   font-weight: 600
   font-size: 15px
@@ -39,7 +39,7 @@
 .caphornPoster
   width: 30em 
   height: auto
-  margin: 8% 0% 5% 30%
+  margin: 8% 0% 20% 35%
 
 .caphornTitle
   margin-bottom: 0.7em
@@ -59,6 +59,7 @@
   border-radius: 10px
   font-family: 'roboto' 
   font-size: 15px
+  margin-left: 45em
 
 
 .voirFilmButton:hover 
