--- a/src/components/Footer/styles.sass
+++ b/src/components/Footer/styles.sass
@@ -11,4 +11,11 @@
   position: absolute
   margin: 0% 0% 0% 0%
   width: 100% 
-  height: 20%
+  height: 25em
+
+.borisLogoBlanc
+  width: 20em 
+  height: auto
+
+.footerText
+  margin-top: 4.8%
