--- a/src/components/Header/header.sass
+++ b/src/components/Header/header.sass
@@ -21,6 +21,7 @@
    
    position: fixed
    hoverflow: hidden
+   z-index: 999
 
 
 
