--- a/src/components/Home/home.sass
+++ b/src/components/Home/home.sass
@@ -318,7 +318,7 @@
   color: #E5E5E5
   font-style: normal
   font-weight: 400
-  font-size: 14px
+  font-size: 16px
   font-family: "Raleway"
   line-height: 24.99px
   text-transform: none
